--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@
     <delete dir="release/doc/api" />
     <mkdir dir="release/doc/api" />
     <javadoc locale="en" packagenames="net.furfurylic.chionographis.*"
-      sourcepath="src" destdir="release/doc" encoding="UTF-8" docencoding="UTF-8"
+      sourcepath="src" destdir="release/doc/api" encoding="UTF-8" docencoding="UTF-8"
       charset="UTF-8" windowtitle="Chionographis API Specification"
       doctitle="Chionographis API Specification" header="Chionographis API"
       classpath="${ant.home}/lib/ant.jar" use="yes" />
@@ -43,7 +43,7 @@
     <delete dir="devel/doc/api" />
     <mkdir dir="devel/doc/api" />
     <javadoc locale="en" packagenames="net.furfurylic.chionographis.*"
-      sourcepath="src" destdir="devel/doc" encoding="UTF-8" docencoding="UTF-8"
+      sourcepath="src" destdir="devel/doc/api" encoding="UTF-8" docencoding="UTF-8"
       charset="UTF-8" windowtitle="Chionographis API Specification"
       doctitle="Chionographis API Specification for developers" header="Chionographis API for developers"
       classpath="${ant.home}/lib/ant.jar" access="package" use="yes" />
