Fix bug in Transform and All drivers
in which new-ness is not judged correctly in startOne

--- a/build.xml
+++ b/build.xml
@@ -49,7 +49,7 @@
     <delete dir="release/doc/api" />
   </target>
 
-  <target name="api-doc-devel">
+  <target name="api-docs-devel">
     <delete dir="devel/doc/api" />
     <mkdir dir="devel/doc/api" />
     <javadoc locale="en" packagenames="net.furfurylic.chionographis.*"
