--- a/build.xml
+++ b/build.xml
@@ -1,63 +1,140 @@
 <project name="chionographis" default="classes">
 
-  <target name="classes">
-    <sequential>
-      <delete dir="release/classes" />
-      <mkdir dir="release/classes" />
-      <javac srcdir="src" includes="net/furfurylic/chionographis/**/*.java"
-        destdir="release/classes" nowarn="yes" source="1.8" debug="yes"
-        debuglevel="source,lines" includeantruntime="yes" />
-      <delete dir="release/lib" />
-      <mkdir dir="release/lib" />
-      <jar destfile="release/lib/chionographis.jar" basedir="release/classes"
-        includes="**/*" update="false" filesonly="true" index="yes" level="9">
-        <manifest>
-          <attribute name="Sealed" value="true" />
-        </manifest>
-      </jar>
-    </sequential>
+  <target name="classes" depends="-compile,-archive"/>
+
+  <target name="-compile">
+    <delete dir="release/classes"/>
+    <mkdir dir="release/classes"/>
+    <javac srcdir="src" includes="net/furfurylic/chionographis/**/*.java"
+      destdir="release/classes" nowarn="yes" source="1.8" debug="yes"
+      debuglevel="source,lines" includeantruntime="yes"/>
   </target>
 
-  <target name="api-docs">
-    <delete dir="release/doc/api" />
-    <mkdir dir="release/doc/api" />
+  <target name="-archive" depends="rev,-archive-spec,-archive-no-spec"/>
+
+  <target name="-archive-spec" if="${rev.isbase}">
+    <delete dir="release/lib" />
+    <mkdir dir="release/lib" />
+    <jar destfile="release/lib/chionographis.jar" basedir="release/classes"
+      includes="**/*" update="false" filesonly="true" index="yes" level="9">
+      <manifest>
+        <attribute name="Sealed" value="true"/>
+        <attribute name="Specification-Title" value="Chionographis"/>
+        <attribute name="Specification-Version" value="${rev.spec}"/>
+        <attribute name="Implementation-Title" value="net.furfurylic.chionographis"/>
+        <attribute name="Implementation-Version" value="${rev.number}"/>
+      </manifest>
+    </jar>
+  </target>
+
+  <target name="-archive-no-spec" unless="${rev.isbase}">
+    <delete dir="release/lib" />
+    <mkdir dir="release/lib" />
+    <jar destfile="release/lib/chionographis.jar" basedir="release/classes"
+      includes="**/*" update="false" filesonly="true" index="yes" level="9">
+      <manifest>
+        <attribute name="Sealed" value="true"/>
+        <attribute name="Specification-Title" value="Chionographis"/>
+        <attribute name="Implementation-Title" value="net.furfurylic.chionographis"/>
+        <attribute name="Implementation-Version" value="${rev.number}"/>
+      </manifest>
+    </jar>
+  </target>
+
+  <target name="api-docs" depends="rev,-api-docs-spec,-api-docs-no-spec"/>
+
+  <target name="-api-docs-spec" if="${rev.isbase}">
+    <delete dir="release/doc/api"/>
+    <mkdir dir="release/doc/api"/>
     <javadoc locale="en" packagenames="net.furfurylic.chionographis.*"
       sourcepath="src" destdir="release/doc/api" encoding="UTF-8" docencoding="UTF-8"
-      charset="UTF-8" windowtitle="Chionographis API Specification"
-      doctitle="Chionographis API Specification" header="Chionographis API"
-      classpath="${ant.home}/lib/ant.jar" use="yes" />
+      charset="UTF-8" windowtitle="Chionographis API version ${rev.spec} (${rev.number})"
+      doctitle="Chionographis API v${rev.spec}" header="Chionographis API v${rev.spec}"
+      classpath="${ant.home}/lib/ant.jar" use="yes"/>
   </target>
 
-  <target name="users-guide">
-    <mkdir dir="release/doc" />
-    <exec executable="asciidoc">
-      <arg line="-b html5" />
-      <arg line="-a toc" />
-      <arg line="-n" />
-      <arg line="-o release/doc/UsersGuide.html" />
-      <arg line="UsersGuide.asciidoc" />
+  <target name="-api-docs-no-spec" unless="${rev.isbase}">
+    <delete dir="release/doc/api"/>
+    <mkdir dir="release/doc/api"/>
+    <javadoc locale="en" packagenames="net.furfurylic.chionographis.*"
+      sourcepath="src" destdir="release/doc/api" encoding="UTF-8" docencoding="UTF-8"
+      charset="UTF-8" windowtitle="Chionographis API (version ${rev.number})"
+      doctitle="Chionographis API" header="Chionographis API"
+      classpath="${ant.home}/lib/ant.jar" use="yes"/>
+  </target>
+
+  <target name="rev" depends="-rev-number,-rev-spec,-rev-date"/>
+
+  <target name="-rev-number">
+    <mkdir dir="release/rev"/>
+    <exec executable="git" output="release/rev/number">
+      <arg line="describe" />
+      <arg line="--tags" />
+    </exec>
+    <replaceregexp file="release/rev/number" match="^[\s]*v([\S]+)[\s]*$" replace="\1"/>
+    <loadfile property="rev.number" srcfile="release/rev/number"/>
+    <copy file="release/rev/number" tofile="release/rev/base"/>
+    <replaceregexp file="release/rev/base" match="^[\s]*([\d]+\.[\d]+\.[\d]+).*$" replace="\1"/>
+    <loadfile property="rev.base" srcfile="release/rev/base"/>
+    <delete dir="release/rev"/>
+  </target>
+
+  <target name="-rev-isbase" depends="-rev-number">
+    <condition property="rev.isbase" else="false">
+      <equals arg1="${rev.number}" arg2="${rev.base}"/>
+    </condition>
+  </target>
+
+  <target name="-rev-spec" if="${rev.isbase}" depends="-rev-number,-rev-isbase">
+    <mkdir dir="release/rev"/>
+    <echo message="${rev.base}" file="release/rev/spec"/>
+    <echo>hoge</echo>
+    <replaceregexp file="release/rev/spec" match="^[\s]*([\d]+\.[\d]+).*$" replace="\1"/>
+    <loadfile property="rev.spec" srcfile="release/rev/spec"/>
+    <delete dir="release/rev"/>
+  </target>
+
+  <target name="-rev-date">
+    <mkdir dir="release/rev"/>
+    <exec executable="git" output="release/rev/date">
+      <arg line="log"/>
+      <arg line="-1"/>
+      <arg line="--date=iso"/>
+      <arg line="--format='%cd'"/>
+     </exec>
+    <replaceregexp file="release/rev/date" match="^[\s]*([\S]+)[\s]$" replace="\1"/>
+    <loadfile property="rev.date" srcfile="release/rev/date"/>
+    <delete dir="release/rev"/>
+  </target>
+
+  <target name="users-guide" depends="rev">
+    <mkdir dir="release/doc"/>
+    <exec executable="asciidoc" failonerror="true">
+      <arg line="-b html5"/>
+      <arg line="-a toc"/>
+      <arg line="-n"/>
+      <arg line="-o release/doc/UsersGuide.html"/>
+      <arg line="-a revnumber=${rev.number}"/>
+      <arg line="-a revdate='${rev.date}'"/>
+      <arg line="UsersGuide.asciidoc"/>
     </exec>
   </target>
 
-  <target name="release">
-    <delete dir="release" />
-    <antcall target="classes" />
-    <antcall target="api-docs" />
-    <antcall target="users-guide" />
-    <zip destfile="release/doc/api.zip" basedir="release/doc/api" level="9" />
-    <delete dir="release/classes" />
-    <delete dir="release/doc/api" />
+  <target name="release" depends="classes,api-docs,users-guide">
+    <zip destfile="release/doc/api.zip" basedir="release/doc/api" level="9"/>
+    <delete dir="release/classes"/>
+    <delete dir="release/doc/api"/>
   </target>
 
   <target name="api-docs-devel">
-    <delete dir="devel/doc/api" />
-    <mkdir dir="devel/doc/api" />
+    <delete dir="devel/doc/api"/>
+    <mkdir dir="devel/doc/api"/>
     <javadoc locale="en" packagenames="net.furfurylic.chionographis.*"
       sourcepath="src" destdir="devel/doc/api" encoding="UTF-8" docencoding="UTF-8"
-      charset="UTF-8" windowtitle="Chionographis API Specification"
-      doctitle="Chionographis API Specification for developers"
+      charset="UTF-8" windowtitle="Chionographis API for developers"
+      doctitle="Chionographis API for developers"
       header="Chionographis API for developers"
-      classpath="${ant.home}/lib/ant.jar" access="package" use="yes" />
+      classpath="${ant.home}/lib/ant.jar" access="package" use="yes"/>
   </target>
 
 </project>
