--- a/build.xml
+++ b/build.xml
@@ -110,7 +110,7 @@
     <exec executable="git" outputproperty="git.log.date">
       <arg line="log"/>
       <arg line="-1"/>
-      <arg line="--date=iso-strict"/>
+      <arg line="--date=iso"/>
       <arg line="--format='%cd'"/>
      </exec>
     <script language="javascript"><![CDATA[
@@ -123,7 +123,7 @@
         project.setNewProperty("rev.spec", spec);
       }
       dateString = project.getProperty("git.log.date").trim();
-      date = new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssX").parse(dateString);
+      date = new java.text.SimpleDateFormat("yyyy-MM-dd HH:mm:ssX").parse(dateString);
       format = new java.text.SimpleDateFormat("yyyy-MM-dd HH:mm:ss Z");
       format.setTimeZone(java.util.TimeZone.getTimeZone("UTC"));
       dateString = format.format(date);
