Add "javadoc.setUse(true);" to build.xml

--- a/build.xml
+++ b/build.xml
@@ -84,6 +84,7 @@
         javadoc.setDoctitle("Chionographis API");
         javadoc.setHeader("Chionographis API");
       }
+      javadoc.setUse(true);
       javadoc.perform();
     ]]></script>
   </target>
