Collect the artifacts into one archive

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ env:
   - ANT_ARGS="-logger org.apache.tools.ant.listener.AnsiColorLogger -Dnet.furfurylic.chionographis.squelch=true"
 script:
   - ant
-  - ant -lib release/lib -f test/test.xml
+  - ant -lib release -f test/test.xml
